### Voltaire's Nightmare Changelog ###

# v 2.2.6 #

-Fixed government reform progress of natives
-Optimised some bits of code to be less laggy (thanks to Advocatus Diaboli)
-Other minor localization/bug fixes

# v 2.2.5 #

-Updated the mod to EU4 version 1.32
-Added new mission tree for Taifa 21 missions (contribution by RetrogMGXII)
-Added the following new mercenary companies: Berber Auxiliaries
-Added the following monuments: House of Wisdom, Palais des Papes in Avignon, Binnenhof in Den Haag (contributed by Fresian), Abbey of Cluny, St. Pierre Cathedral in Geneva (contrbuted by RetrogMGXII)
-Added 6 new papal bulls for the Catholique papacy
-Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, France, Navarra, Bohemia, Worms, Byzantium, Bogomilist, Taifa, Burgundy, Georgia, Outremer, Morocco, Holland, Palatinate
-Added an event for the Arumer Zwarte Hoop
-Added an event for the spread of Maize in Europe in the 16th century
-Added 1 new estate privilege: 1 for Muslim Andalusian nations (Hire Jewish Viziers/Dhimmis)
-Buffed invading nations
-Rebalanced costs and effects of monuments
-Minor history changes especially during the Danish Interregnum and around Weimar
-Small rework to Denmark's mission tree structure
-Fixed CTD caused by missing Epic Games store button
-Some more missions now utilise monuments if you own Leviathan
-Some privileges will utilize more trade goods
-Canals will no longer randomly spawn before when they are supposed to be built
-Doubled the total number of cardinals and increased the number of cardinals per country and on gamestart
-The Prussian Confederacy will start with more provinces
-Revolutionary and reactionary rebellions will be larger when a revolution starts
-Estates will no longer demand the construction of a manufactory before tech 32
-The Golden Horde and Ilkhanate will now start as historical friends, however, they will become historical rivals later on