@@ -350,6 +350,7 @@ ottoman_government = {
 	}
 	legacy_equivalent = ottoman_government_legacy
 	maintain_dynasty = yes
+	can_change_primary_culture = no
 	modifiers = {
 		unjustified_demands = -0.1
 		legitimacy = 0.5
