@@ -1330,6 +1330,7 @@ MOD_ideas = {
 
     MOD_idea_1 = {
         prestige = 0.5
+        great_project_upgrade_cost = -0.1
     }
     MOD_idea_2 = {
         land_morale = 0.1
@@ -3120,7 +3121,7 @@ WEE_ideas = {
 DSD_ideas = {
     start = {
         build_cost = -0.1
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     bonus = {
 		governing_capacity_modifier = 0.1
@@ -3258,6 +3259,7 @@ ZLX_ideas = {
 	}
 	ZLX_idea_3 = {
 		global_trade_goods_size_modifier = 0.1
+        monthly_gold_inflation_modifier = -0.2
 	}
 	ZLX_idea_4 = {
 		papal_influence = 2
@@ -3405,7 +3407,7 @@ ZUR_ideas = {
         tolerance_own = 2
     }
     Establishment_of_the_zuercher_city_council = {
-		monthly_reform_progress_modifier = 0.15
+		reform_progress_growth  = 0.15
         burghers_loyalty_modifier = 0.05
     }
     Codes_Manesse = {
@@ -7706,7 +7708,7 @@ DXS_ideas = {
 TUB_ideas = {
     start = {
         diplomatic_reputation = 1
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     bonus = {
         infantry_power = 0.15
@@ -8787,6 +8789,7 @@ CTH_ideas = {
     }
     CTH_idea_5 = {
         global_trade_goods_size_modifier = 0.1
+        monthly_gold_inflation_modifier = -0.2
     }
     CTH_idea_6 = {
         global_institution_spread = 0.1
@@ -9541,6 +9544,7 @@ XBG_ideas = {
     }
     XBG_idea_2 = {
         production_efficiency = 0.1
+        monthly_gold_inflation_modifier = -0.2
     }
     XBG_idea_3 = {
         idea_cost = -0.1
@@ -10008,8 +10012,7 @@ GRM_ideas = {
         land_forcelimit_modifier = 0.2
     }
     GRM_idea_3 = {
-        vassal_income = 0.2
-        vassal_forcelimit_bonus = 1
+        accept_vassalization_reasons = 10
     }
     GRM_idea_4 = {
         inflation_reduction = 0.1
@@ -10132,6 +10135,7 @@ IRQ_ideas = {
     }
     IRQ_idea_6 = {
         technology_cost = -0.05
+        great_project_upgrade_cost = -0.1
     }
     IRQ_idea_7 = {
         diplomatic_upkeep = 1
@@ -10554,6 +10558,7 @@ VDR_ideas = {
     }
     VDR_idea_7 = {
         diplomatic_reputation = 1
+        great_project_upgrade_cost = -0.1
     }
 }
 
@@ -10673,7 +10678,7 @@ SVN_ideas = {
 DBT_ideas = {
     start = {
         merchants = 1
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     bonus = {
         yearly_corruption = -0.1
@@ -10723,7 +10728,7 @@ MRY_ideas = {
     free = yes
 
     MRY_idea_1 = {
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     MRY_idea_2 = {
         spy_offence = 0.2
@@ -10866,7 +10871,7 @@ XBL_ideas = {
 
 SYR_ideas = {
     start = {
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
         defensiveness = 0.2
     }
     bonus = {
@@ -11304,7 +11309,7 @@ MRK_ideas = {
 
     MRK_idea_1 = {
         global_institution_spread = 0.1
-        embracement_cost = -0.1
+        great_project_upgrade_cost = -0.1
     }
     MRK_idea_2 = {
         build_cost = -0.1
@@ -11318,7 +11323,7 @@ MRK_ideas = {
     }
     MRK_idea_5 = {
         war_exhaustion = -0.02
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     MRK_idea_6 = {
         global_heretic_missionary_strength = 0.02
@@ -12157,7 +12162,7 @@ QAS_ideas = {
     }
     QAS_idea_5 = {
         heir_chance = 0.5
-        monthly_reform_progress_modifier = 0.15
+        reform_progress_growth  = 0.15
     }
     QAS_idea_6 = {
         enemy_core_creation = 0.25
@@ -12397,6 +12402,7 @@ MSM_ideas = {
     }
     MSM_idea_5 = {
         global_trade_goods_size_modifier = 0.1
+        monthly_gold_inflation_modifier = -0.2
     }
     MSM_idea_6 = {
         development_cost = -0.1
