@@ -3080,10 +3080,12 @@ country_decisions = {
 				every_country = {
 					limit = { has_country_flag = was_ase_junior }
 					ROOT = { create_union = PREV }
+					add_liberty_desire = -50
 				}
 				every_country = {
 					limit = { has_country_flag = was_ase_vassal }
 					ROOT = { vassalize = PREV }
+					add_liberty_desire = -50
 				}
 				#every_owned_province = {
 				#	limit = {
@@ -3112,12 +3114,6 @@ country_decisions = {
 				add_legitimacy = -20
 				add_prestige = 25
 			}
-			#hidden_effect = {
-				country_event = {
-					id = ideagroups.1
-					days = 30
-				}
-			#}
 		}
 		ai_will_do = {
 			factor = 1
