@@ -1472,7 +1472,6 @@ country_event = {
         			OR = {
         				owner = { ai = yes }
         				is_capital = no
-        				province_id = 4974
         			}
         		}
         		add_core = KOJ
@@ -1885,7 +1884,6 @@ country_event = {
 					OR = {
         				owner = { ai = yes }
         				is_capital = no
-						province_id = 402
         			}
         			owned_by = ROOT
         		}
@@ -1992,7 +1990,6 @@ country_event = {
 					OR = {
         				owner = { ai = yes }
         				is_capital = no
-						province_id = 5793
         			}
         			owned_by = ROOT
         		}
