@@ -1956,7 +1956,7 @@
  SEV_ideas_bonus: "Sevillische Ambitionen"
  SEV_idea_1: "Finsternis von Córdoba"
  SEV_idea_1_desc: "Nachdem das Kalifat der Umayyaden gefallen war und Al-Andalus sich selbst überlassen wurde, ersetzte die Stadt Sevilla schnell Córdoba als wirtschaftliches Zentrum der Region."
- SEV_idea_2: "Alles, was das licht berührt"
+ SEV_idea_2: "Alles, was das Licht berührt"
  SEV_idea_2_desc: "Eine Reihe von raschen Kriegen und expansiven Maßnahmen der Herrscher des Taifa von Ishbiliyya führten dazu, dass wir uns als das stärkste Taifa in Al-Andalus etablierten und die Herrschaft über die meisten muslimischen Gebiete in Spanien beanspruchten."
  SEV_idea_3: "Aufbrechen der Hegemonie"
  SEV_idea_3_desc: "Es waren die Herrscher von Ishbiliyya, die Ende des 11. Jahrhunderts aufhörten, den christlichen Königen von Kastilien Tribut zu zollen, und den Feldzug gegen sie anführten."
