@@ -233,7 +233,7 @@
  CS_NO_TECH: "Ihr benötigt die Technologiestufe 60, um einen Satellitenstaat gründen zu können."
  westminster_abbey: "Westminster Abbey"
  desc_westminster_abbey: "Sie ist eine der prächtigsten Kirchen Europas und wurde im 11. Jahrhundert von Eduard der Bekenner umgebaut und erweitert."
- normand_english_tooltip: "Wir werden mit England vertauscht"
+ normand_english_tooltip: "Wir werden unsere Position mit England tauschen"
  quarantined_influenza: "Provinz unter Quarantäne gestellt"
  desc_quarantined_influenza: "Die Provinz wurde unter Quarantäne gestellt, um die Ausbreitung der Pest zu verhindern. Doch die fehlende Hilfe war für die Provinz verheerend."
  influenza: "Pest"
