@@ -396,14 +396,14 @@
  vn_ase_consolidate_ireland_desc: "Nun, da Irland erobert wurde, müssen wir es mit allen Mitteln in unserer Gewalt behalten. Es ist kein Geheimnis, dass die Iren am Ende viel lieber unabhängig wären..."
  vn_ase_westminster_abbey_title: "Westminster Abbey"
  vn_ase_westminster_abbey_desc: "Das vielleicht größte Vermächtnis, das Eduard der Bekenner in London hinterlassen hat, ist die Westminster Abbey, die auf sein Geheiß gegen Ende seiner Herrschaft errichtet wurde."
- vn_ase_romanesque_architecture_title: "Romantische Architektur"
+ vn_ase_romanesque_architecture_title: "Romanische Architektur"
  vn_ase_romanesque_architecture_desc: "Eine architektonische Bewegung, die vom Kontinent kommt, hat in unserem Land schnell an Popularität gewonnen: die Romanik. Wir müssen dies nutzen und die prachtvollsten Gebäude in diesem Stil errichten, um ausländische Würdenträger zu beeindrucken."
  vn_ase_norman_castles_title: "Normannische Burgen"
  vn_ase_norman_castles_desc: "Die Normannen mögen unsere Widersacher gewesen sein, aber wir müssen zugeben, dass sie hervorragende Burgen hatten. Indem wir ihre Entwürfe adaptieren und sie zur Kontrolle unserer Städte und Grenzen nutzen, werden wir viel sicherer gegen Invasionen und Rebellionen sein."
  vn_ase_scandinavian_diplomacy_title: "Skandinavische Diplomatie"
  vn_ase_scandinavian_diplomacy.tt: "Hauptstadt ist in der Überregion §YSkandinavien§!"
  vn_ase_scandinavian_diplomacy_desc: "Die Wikinger mögen zwar mehrmals über uns hergefallen sein und uns einige Male erobert haben, aber die Zeiten haben sich geändert und heute sind die Skandinavier weniger kriegerisch und vielmehr bereit, mit uns zu handeln."
- vn_ase_open_doors_to_trade_title: "Öffnet die Tore zum Handeln"
+ vn_ase_open_doors_to_trade_title: "Die Tore zum Handeln"
  vn_ase_open_doors_to_trade_desc: "Einige mögen sagen, dass wir im Umgang mit anderen Ländern nicht offen genug waren, und sie haben Recht; wir sollten eine neue Freihandelspolitik pflegen, die unserem diplomatischen Ansehen sicherlich zugute kommen wird."
  vn_ase_growth_of_burhs_title: "Wachstum der Burhs"
  vn_ase_growth_of_burhs_desc: "Die Burh ist die traditionelle angelsächsische Stadt, die sich innerhalb einer befestigten Anlage befindet; obwohl diese Bauweise in Kriegszeiten von Vorteil war, schränkt sie in Friedenszeiten ihre Expansion ein. Wir sollten die Burhs ermutigen, über ihre mittelalterlichen Mauern hinaus zu wachsen und dies durch zusätzliche Verteidigungsanlagen zu kompensieren."
@@ -579,7 +579,7 @@
  vn_eng_control_eastern_scotland_desc: "Im Gegensatz zu den Highlands ist der Osten Schottlands immer noch ein Teil der Lowlands, deren Machtzentren einschließlich Scone, dem Ort, an dem die schottischen Könige gekrönt werden, für uns weit offen stehen, um von uns eingenommen zu werden."
  vn_eng_seize_calais_title: "Erobert Calais"
  vn_eng_seize_calais_desc: "Calais ist ein strategisch und wirtschaftlich sehr bedeutender Hafen an der Mündung des Ärmelkanals. Seine Kontrolle wird uns eine Basis für weitere Feldzüge in Nordfrankreich geben."
- vn_eng_claim_french_throne_title: "Der französische Thron"
+ vn_eng_claim_french_throne_title: "Französischer Thron"
  vn_eng_claim_french_throne.tt: "Wenn der Hundertjährige Krieg nicht begonnen hat, kann diese Mission umgangen werden."
  vn_eng_claim_french_throne.tt2: "Der Hundertjährige Krieg hat begonnen."
  vn_eng_claim_french_throne_desc: "Obwohl wir unabhängig vom französischen Joch sind, haben wir durchaus noch die Möglichkeit, über sie zu herrschen. Es sind eine Reihe obskurer Dokumente ans Licht gekommen, die zeigen, dass unser Monarch tatsächlich der nächste in der Reihe der französischen Krone ist. Natürlich werden die Franzosen selbst dies vehement bestreiten, aber hier werden die Kriege beginnen."
@@ -589,7 +589,7 @@
  vn_eng_dual_monarchy_desc: "Nachdem wir Paris eingenommen haben, müssen wir unseren Vorteil ausspielen und die geschwächten französischen Streitkräfte untergraben. Die Kriege sollen erst mit der vollständigen Unterwerfung Frankreichs in eine Doppelmonarchie enden."
  vn_eng_influence_in_empire_title: "Einfluss im Reich"
  vn_eng_influence_in_empire_desc: "Obwohl das Heilige Römische Reich weit entfernt ist - und manche sagen mögen, dass es weder heilig, noch römisch noch ein Reich sei -, ist es immer noch ein riesiger Streifen Land in Mitteleuropa. Wenn wir genügend Unterstützung von den Kurfürsten erhalten und selbst Kaiser des Heiligen Römischen Reiches werden, wird unsere Macht auf der europäischen Bühne erheblich zunehmen."
- vn_eng_order_of_the_garter_title: "Der Hosenbandorden"
+ vn_eng_order_of_the_garter_title: "Orden vom Hosenbande"
  vn_eng_order_of_the_garter_desc: "Wenn Ritterlichkeit in aller Munde ist, wie könnten wir da nicht einen echten eigenen Ritterorden haben, der die tugendhaftesten Ritter des Landes belohnt?"
  vn_eng_a_new_religion_title: "Eine neue Religion?"
  vn_eng_a_new_religion_desc: "Immer mehr prominente religiöse Reformer haben gegen den Papst und seine Religion gepredigt und behauptet, dass die Kirche von Korruption befallen sei. Dazu gehören auch einige Kritiker an der katholischen Kirche in unseren Ländereien, die uns auffordern, mit dem Papst zu brechen und eine eigene Kirche zu gründen. Die Frage ist, ob wir diesem neuen Glaubensbekenntnis folgen oder diesem radikal neuen Glauben entgegentreten wollen."
@@ -611,15 +611,15 @@
  vn_eng_conquer_ulster_desc: "Die Region Ulster, am Nordostrand Irlands, muss unter unsere Kontrolle gebracht werden."
  vn_eng_irish_plantations_title: "Irische Plantagen"
  vn_eng_irish_plantations_desc: "Wir haben festgestellt, dass ein großer Teil Irlands reif ist für eine Besiedlung durch unsere eigenen Geschwister. Die Konfiszierung von Land von der einheimischen Bevölkerung und die Umverteilung an neue Kolonisten wird unsere Kontrolle über eine unbeständige Region festigen."
- vn_eng_establish_naval_bases_title: "Errichtet Marinestützpunkte"
+ vn_eng_establish_naval_bases_title: "Marine-\nstützpunkte"
  vn_eng_establish_naval_bases_desc: "Da wir größtenteils auf einer Insel mit vielen natürlichen Häfen liegen, können wir viel mehr Stützpunkte für unsere Handels- und Kriegsflotten errichten als unsere Konkurrenten. Lasst uns dies zu unserem Vorteil nutzen."
  vn_eng_trade_in_low_countries_title: "Handelt in den Niederlanden"
  vn_eng_trade_in_low_countries_desc: "Die Niederlande waren traditionell das Hauptziel unserer Wollexporte und auch des größten Teils unserer Stoffimporte. Dieser Handel muss nicht nur weitergehen, vielmehr muss er florieren, wobei wir eine Mehrheitsbeteiligung an ihm kontrollieren müssen."
- vn_eng_scandinavian_trade_title: "Skandinavischer Handel"
+ vn_eng_scandinavian_trade_title: "Handel mit Skandinavien"
  vn_eng_scandinavian_trade_desc: "Skandinavien ist seit den Tagen der Wikinger immer ein historischer Handelspartner gewesen, doch mit unserer Schwerpunktverlagerung auf Kontinentaleuropa sind sie als Einnahmequelle weitgehend vernachlässigt worden. Lasst uns den Nordseehandel wieder beleben und von den Vorteilen profitieren."
  vn_eng_conquer_baleares_title: "Erobert die Balearen"
  vn_eng_conquer_baleares_desc: "Obwohl die Balearen weit von unseren Heimathäfen entfernt sind, sind sie für die Kontrolle des westlichen Mittelmeers von strategischer Bedeutung. Wir müssen die Inseln erobern und befestigen, um unsere Reichweite weiter auszudehnen."
- vn_eng_mercantilist_policy_title: "Merkantilistische Politik"
+ vn_eng_mercantilist_policy_title: "Merkantile Politik"
  vn_eng_mercantilist_policy_desc: "Wenn wir uns zu einer Politik des Merkantilismus, der Minimierung von Importen und der Maximierung von Exporten, verpflichten, werden wir zu einer wirklich autarken Nation ohne Abhängigkeit von irgendeiner äußeren Macht."
  vn_eng_mediterranean_authority_title: "Mediterrane Autorität"
  vn_eng_mediterranean_authority_desc: "Der Besitz einiger kleiner Inseln im Mittelmeer wird eindeutig nicht ausreichen, um das gesamte Meeresbecken zu beherrschen. Wir müssen jede Gelegenheit ergreifen, um hier noch mehr Einfluss in den reichen Handelsnetzen zu gewinnen."
@@ -3035,7 +3035,7 @@
  desc_fra_marca_hispanica_mission: ""
  fra_encourage_urbanization_mission: "Wachsende Bevölkerung"
  desc_fra_encourage_urbanization_mission: ""
- fra_expand_royal_authority_mission: "A Centralizing State"
+ fra_expand_royal_authority_mission: "Ein zentralisierender Staat"
  desc_fra_expand_royal_authority_mission: ""
  fra_found_sorbonne_mission: "Die Sorbonne"
  desc_fra_found_sorbonne_mission: ""
