@@ -2540,53 +2540,53 @@
  vn_hns_asian_trade_title: "Control Asian Trade"
  vn_hns_asian_trade_desc: ""
 #Taifa
- vn_taifa_restore_andalusia_title: "End the Fitna"
+ vn_taifa_restore_andalusia_title: "Beendet die Fitna"
  vn_taifa_restore_andalusia_desc: "The pleasantries are finally over! We have united Andalusia, and it is time the other Taifas accept us as the rightful rulers of Andalusia"
- vn_taifa_placate_the_christians_title: "Placate the Christians"
+ vn_taifa_placate_the_christians_title: "Beschwichtigt die Christen"
  vn_taifa_placate_the_christians_desc: "We are sadly in no state to fight the Christians for now. So we will have to pay them off to secure our nation's security."
- vn_taifa_placate_the_christians.tt: " §YChristian§! nations have recieved a §YGift§! by [Root.GetName]."
- vn_taifa_construct_castles_title: "Construct Alcázars"
+ vn_taifa_placate_the_christians.tt: " §Ychristliche§! Nationen haben ein §YGeschenk§! von [Root.GetName] erhalten."
+ vn_taifa_construct_castles_title: "Errichtet Alcázars"
  vn_taifa_construct_castles_desc: "Fortifying our lands against Christian raiders will bring protection and prosperity to our lands."
- vn_taifa_construct_castles.tt: "Every owned province with a §YFort§! gains §Y1§! Basic Manpower."
- vn_taifa_proclaim_sultanate_title: "Proclaim a Sultanate"
+ vn_taifa_construct_castles.tt: "Jede Provinz in Besitz miz einem §YFort§! erhält §Y1§! Grundmannstärke."
+ vn_taifa_proclaim_sultanate_title: "Proklamiert ein Sultanat"
  vn_taifa_proclaim_sultanate_desc: "Our state stands above the other Taifas states. We shall not be just some local Emir anymore!"
- vn_taifa_gather_support_title: "Gather Support"
+ vn_taifa_gather_support_title: "Gewinnt Unterstützung"
  vn_taifa_gather_support_desc: "To come on top in the Fitna of Al-Andalus we need to secure some local allies. This will secure a front against the Christians and our other rivals."
- vn_taifa_gather_support.tt: " allies:\nHave a capital in the §YIberia§! superregion.\nHave at least §Y150§! opinion of §Y[Root.GetName]§!."
- vn_taifa_humiliate_rivals_title: "Humiliate Taifas"
+ vn_taifa_gather_support.tt: " Verbündete:\nHaben eine Hauptstadt in der Überregion §YIberien§!.\nHaben mindestens §Y150§! Meinung von §Y[Root.GetName]§!."
+ vn_taifa_humiliate_rivals_title: "Erniedrigt Taifas"
  vn_taifa_humiliate_rivals_desc: "Our recent conquests have put shame on our rivals by showing our might."
- vn_taifa_humiliate_rivals.tt: "All rival countries have been insulted by [Root.GetName] or defeated in war by [Root.GetName] in the last §Y20§! years."
- vn_taifa_spoils_of_war_title: "Spoils of War"
+ vn_taifa_humiliate_rivals.tt: "Alle Rivalen wurden entweder von [Root.GetName] beleidigt oder in den letzten §Y20§! Jahren von [Root.GetName] in einem Krieg besiegt."
+ vn_taifa_spoils_of_war_title: "Kriegsbeute"
  vn_taifa_spoils_of_war_desc: "We should plunder the treasuries of our adversaries and use these funds to rebuild our nation."
- vn_taifa_spoils_of_war.tt: "Gain §Y50§! ducats for each nation paying us war reparations, up to §Y5§! times."
- vn_taifa_university_of_cordoba_title: "Center of Attention"
+ vn_taifa_spoils_of_war.tt: "Erhaltet §Y50§! Dukaten für jede Nation, die uns Kriegsreparationen zahlt (bis zu §Yfünfmal§!)"
+ vn_taifa_university_of_cordoba_title: "Zentrum der Aufmerksamkeit"
  vn_taifa_university_of_cordoba_desc: "If we rebuild Córdoba to its original glory we will show the other Taifas that Córdoba is still the heart of Andalusia."
- vn_taifa_protect_the_locals_title: "Protect the Locals"
+ vn_taifa_protect_the_locals_title: "Beschützt die Einheimischen"
  vn_taifa_protect_the_locals_desc: "As long as we can't even defend the local population no one will recognize our claims. We need to consolidate our position."
- vn_taifa_berber_support_title: "Obligate the Berbers"
+ vn_taifa_berber_support_title: "Verpflichtet die Berber"
  vn_taifa_berber_support_desc: "Many Berbers were imported from the Maghreb to Andalusia to help fighting the Christians. It is time we put them to better use."
- vn_taifa_berber_support.tt: "§Y[Root.GetName]§! has won a war using §YBerber Auxiliaries§! mercenaries."
- vn_taifa_summon_a_council_title: "Summon a Council"
+ vn_taifa_berber_support.tt: "§Y[Root.GetName]§! hat einen Krieg durch den Einsatz von §YBerberischen Hilfstruppen§!-Söldnern gewonnen."
+ vn_taifa_summon_a_council_title: "Einberufung eines Rats"
  vn_taifa_summon_a_council_desc: "The court of the Caliphate of Córdoba was famous for its great minds, contributing significantly to its Golden Age in the 10th century. By staffing our council with capable members, we will demonstrate that our [Root.GovernmentName] is still the al-Andalus of old."
- vn_taifa_continue_the_fitna_title: "Continue the Fitna"
+ vn_taifa_continue_the_fitna_title: "Fortsetzung der Fitna"
  vn_taifa_continue_the_fitna_desc: "During the Fitna of al-Andalus starting in 1009, the Caliphate of Córdoba sank into chaos and civil war. After its collapse in 1031, dozens of small Taifas emerged in its place. This is our chance to seize power and rebuild al-Andalus in our image."
- vn_taifa_conquer_cordoba_title: "The City of Juba"
+ vn_taifa_conquer_cordoba_title: "Die Stadt von Juba"
  vn_taifa_conquer_cordoba_desc: "No Taifa dared to occupy Córdoba at the start of the Fitna, resulting in a power vacuum. If we can successfully take control, it should legitimize all of our other claims."
- vn_taifa_promote_mozarabs_title: "Promote Mozarabs"
+ vn_taifa_promote_mozarabs_title: "Fördert Mozaraber"
  vn_taifa_promote_mozarabs_desc: "After the collapse of the Visigoth Empire in the 8th century, Christian Iberia came under Moorish rule. However, not everyone converted to Islam; Christian minorities still live in our towns and villages today. We must ensure their loyalty to secure our rule."
- vn_taifa_cultural_splendor_title: "Cultural Splendor"
+ vn_taifa_cultural_splendor_title: "Kultureller Reichtum"
  vn_taifa_cultural_splendor_desc: "The Fitna is not just about warfare - it is a clash of spiritual ideas and intellectual ideals, and we will show the fools who oppose us that we are superior."
- vn_taifa_conquer_ceuta_title: "Secure Ceuta"
+ vn_taifa_conquer_ceuta_title: "Sichert Ceuta"
  vn_taifa_conquer_ceuta_desc: "With our control of Ceuta, we will carve out a new frontier not just for expansion but also for trade."
- vn_taifa_restore_cordoba_title: "Regain our Standing"
+ vn_taifa_restore_cordoba_title: "Rückerlangung unseres Ansehens"
  vn_taifa_restore_cordoba_desc: "By having regained Córdoba and restored stability in Andalusia, we have restored our standing in the wider world."
- vn_taifa_restore_cordoba.tt: " estates have at least §Y55§! loyalty."
- vn_taifa_productive_continent_title: "Restore the Economy"
+ vn_taifa_restore_cordoba.tt: " Stände haben mindestens §Y55§! Loyalität."
+ vn_taifa_productive_continent_title: "Wirtschaftliche Wiederherstellung"
  vn_taifa_productive_continent_desc: "After the collapse of the Umayyad Caliphate and the aftermath of the Fitna, our economy became a mess. An effort should be put into restoring it."
- vn_taifa_foreign_military_aid_title: "Foreign Military Aid"
+ vn_taifa_foreign_military_aid_title: "Ausländische Militärhilfe"
  vn_taifa_foreign_military_aid_desc: "The Berbers in North Africa are our friends and should be drawn to our side to support our efforts."
 #Andalusia
- vn_adu_restore_the_caliphate_title: "Reestablish the Caliphate"
+ vn_adu_restore_the_caliphate_title: "Restauriert das Kalifat"
  vn_adu_restore_the_caliphate_desc: "The Umayyad dynasty set up a Caliphate in Andalusia after being overthrown by the Abbasids. The local Andalusians still believe that there should be an Iberian Caliphate; we are the ones for this!"
 ###MODIFIERS###
 #Florence
@@ -4126,29 +4126,29 @@
  hns_reaffirm_judaism_mission_3: "Submitted to a Hostile Faith"
  desc_hns_reaffirm_judaism_mission_3: ""
 #Taifas
- taifa_placate_the_christians_mission: "Buying Time"
+ taifa_placate_the_christians_mission: "Zeit schinden"
  desc_taifa_placate_the_christians_mission: ""
- taifa_university_of_cordoba_mission: "Center of Andalusia"
+ taifa_university_of_cordoba_mission: "Zentrum von Andalusien"
  desc_taifa_university_of_cordoba_mission: ""
- taifa_restore_andalusia_mission: "The Andalusian Phoenix"
+ taifa_restore_andalusia_mission: "Der Andalusische Phönix"
  desc_taifa_restore_andalusia_mission: ""
- taifa_construct_castles_mission: "Taifa Defenses"
+ taifa_construct_castles_mission: "Taifa-Verteidigungen"
  desc_taifa_construct_castles_mission: ""
- taifa_gather_support_mission: "Enemies on All Sides"
+ taifa_gather_support_mission: "Feinde auf allen Seiten"
  desc_taifa_gather_support_mission: ""
- taifa_conquer_ceuta_mission: "Berber Profits"
+ taifa_conquer_ceuta_mission: "Berber-Profite"
  desc_taifa_conquer_ceuta_mission: ""
- taifa_foreign_military_aid_mission: "Foreign Military Aid"
+ taifa_foreign_military_aid_mission: "Ausländische Militärhilfe"
  desc_taifa_foreign_military_aid_mission: ""
- taifa_cultural_splendor_mission_a: "Cultural Dominance"
+ taifa_cultural_splendor_mission_a: "Kulturelle Dominanz"
  desc_taifa_cultural_splendor_mission_a: ""
- taifa_cultural_splendor_mission_b: "Ascendant City"
+ taifa_cultural_splendor_mission_b: "Aufsteigende Stadt"
  desc_taifa_cultural_splendor_mission_b: ""
- taifa_humiliate_rivals_mission: "Victory over the Taifas"
+ taifa_humiliate_rivals_mission: "Sieg über die Taifas"
  desc_taifa_humiliate_rivals_mission: ""
- taifa_productive_continent_mission: "Recovering Economy"
+ taifa_productive_continent_mission: "Erholung der Wirtschaft"
  desc_taifa_productive_continent_mission: ""
- taifa_summon_a_council_mission: "Andalusian Council"
+ taifa_summon_a_council_mission: "Andalusischer Rat"
  desc_taifa_summon_a_council_mission: ""
 ###OPINION MODIFIERS###
  lem_sent_reparations_opinion: "Sent Reparations"
