@@ -4,6 +4,8 @@
 
 -Fixed government reform progress of natives
 -Optimised some bits of code to be less laggy (thanks to Advocatus Diaboli)
+-England will no longer lose its national ideas if formed by Normandy
+-It is no longer possible for Turkish monarchies to change primary culture
 -Other minor localization/bug fixes
 
 # v 2.2.5 #
